[package]
name = "khai_first_rts_engine"
version = "0.0.0"
description = "Just an RTS game"
authors = ["Hoàng Văn Khải <hvksmr1996@gmail.com>"]
repository = "https://github.com/KSXGitHub/my-rts.git"
keywords = ["RTS", "game", "amethyst"]
categories = ["games::rts"]
edition = "2018"

[dependencies]
amethyst = { version = "^0.11.1", features = ["vulkan"] }

[lib]
path = "mod.rs"
